--- a/augur/templates/index.html
+++ b/augur/templates/index.html
@@ -54,7 +54,7 @@
         <div class="d-flex flex-fill align-content-between flex-wrap">
             <div class="order-1 flex-grow-1">
                 <p style="color: white;">This is a beta build of Augur-View. Experimental frontend features may not be fully functional.</p>
-                <p style="color: white;">Currently serving: {{api_url or 'api_url unspecified'}}</p>
+                {# <p style="color: white;">Currently serving: {{api_url or 'api_url unspecified'}}</p> #}
             </div>
             <div class="order-2">
                 <a href="https://chaoss.community/">
