Update auth requirements
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -21,6 +21,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="{{ url_for('static', filename= 'css/dashboard.css') }}" rel="stylesheet">
 
     <title>Settings - Augur View</title>
@@ -128,6 +129,7 @@
                                     {%- set tableHeaders =
                                     [{"title" : "Group"},
                                     {"title" : "Number of repos"},
+                                    {"title" : "Favorite"}
                                     {"title" : ""}]
                                     -%}
                                     <div class="display-table rounded w3-animate-opacity">
@@ -146,6 +148,7 @@
                                                 <tr>
                                                     <th scope="row"><a href="{{ url_for('user_group_view') }}?group={{ group.name }}">{{ group.name }}</a></th>
                                                     <td>{{ group.repos | length }}</td>
+                                                    <td><i onclick="toggleFavorite(this)" class="bi {% if group.favorited %} bi-star-fill {% else %} bi-star {% else %}"></i></td>
                                                     <td><button class="btn btn-outline-primary btn-sm" onclick="delgroup(this, '{{ group.name }}')">Delete</button></td>
                                                 </tr>
                                                 {% endfor %}
@@ -368,6 +371,15 @@
             button.innerHTML = "Confirm";
             button.classList.remove("btn-outline-primary");
             button.classList.add("btn-outline-danger");
+        }
+    }
+    var toggleFavorite = function(button) {
+        if(button.classList.contains("bi-star-fill")) {
+            button.classList.remove("bi-star-fill");
+            button.classList.add("bi-star");
+        } else {
+            button.classList.remove("bi-star");
+            button.classList.add("bi-star-fill");
         }
     }
 </script>
