(WIP) Re-enable admin dashboard Add @requires_admin decorator Add clarity to backend start error status
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/templates/navbar.j2
+++ b/augur/templates/navbar.j2
@@ -22,7 +22,9 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{{ url_for('user_settings') }}">Profile</a></li>
-                        {# <li><a class="dropdown-item" href="{{ url_for('dashboard_view') }}">Dashboard</a></li> #}
+                        {% if current_user.admin %}
+                        <li><a class="dropdown-item" href="{{ url_for('dashboard_view') }}">Dashboard</a></li>
+                        {% endif %}
                         <li><a class="dropdown-item" href="{{ url_for('user_logout') }}">Logout</a></li>
                     </ul>
                 </li>
