Update traceback styling, add /error endpoint
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/static/css/stylesheet.css
+++ b/augur/static/css/stylesheet.css
@@ -54,6 +54,13 @@ body {
     height: 35px;
 }
 
+.stacktrace {
+    background-color: var(--color-fg-contrast);
+    color: var(--color-fg);
+    border-radius: 15px;
+    border-color: var(--color-bg-light);
+}
+
 .content-column {
     overflow-y: scroll;
 }
