--- a/augur/templates/notice.j2
+++ b/augur/templates/notice.j2
@@ -5,7 +5,7 @@
     <p>{{messageBody}}</p>
 {% endif %}
 {% if error %}
-<textarea id="error-traceback" cols="80" readonly style="color: white; background-color: black;">
+<textarea class="stacktrace" id="error-traceback" cols="80" readonly>
 {{ error }}
 </textarea>
 {% endif %}
