--- a/augur/templates/user-group-repos-table.j2
+++ b/augur/templates/user-group-repos-table.j2
@@ -29,6 +29,7 @@
 {%- set tableHeaders =
     [{"title" : "#"},
     {"title" : "Repo Name", "key" : "repo_name"},
+    {"title" : "Owner", "key" : "repo_owner"},
     {"title" : "Reports"},
     {"title" : "Commits", "key" : "commits_all_time"},
     {"title" : "Issues", "key" : "issues_all_time"},
@@ -60,6 +61,7 @@
                 <th scope="row">{{loop.index + (activePage) * offset}}</th>
                 <td><a href="{{ url_for('repo_repo_view', id=repo.repo_id) }}">{{ repo.repo_name }}</a></td>
                 {# <td><a href="{{ url_for('repo_groups_view', group=repo.repo_group_id) }}">{{ repo.rg_name }}</a></td> #}
+                <td><a href="https://github.com/{{ repo.repo_owner }}">{{ repo.repo_owner }}</a></td>
                 <td>TODO</td>
                 <td>{{ repo.commits_all_time|int }}</td>
                 <td>{{ repo.issues_all_time|int }}</td>
@@ -78,7 +80,7 @@
             <a class="page-link" href="{{ url_for(PS, q=query_key, p=(activePage - 1), s=sorting, r=reverse, group=group)}}" {% if activePage == 0 %} tabindex="-1" {% endif %}>Previous</a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="#">{{activePage}}</a>
+            <a class="page-link" href="#">{{activePage|int + 1}}</a>
         </li>
         <li class="page-item {% if activePage == pages|int %} disabled {% endif %}">
             <a class="page-link" href="{{ url_for(PS, q=query_key, p=(activePage + 1), s=sorting, r=reverse, group=group)}}" {% if activePage == pages|int %} tabindex="-1" {% endif %}>Next</a>
