begin work on password reset
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/templates/reset-password.j2
+++ b/augur/templates/reset-password.j2
@@ -1,14 +1,14 @@
-<h1>Verify Your Email</h1>
-<p>We've sent a one-time passcode to {{current_user.email}}</p>
-<p>Please enter the code below. You may need to check your spam or junk folder.</p>
+<h1>Password Reset</h1>
+<p>Enter your email below</p>
+<p>If this email is associated with an account, a password reset link will be sent.</p>
 <div class="container-fluid mt-4">
     <div class="row justify-content-center">
         <form id="verify-form" class="form-signin" style="width: 400px;" method="post" action="#">
             <p>
-                <input type="text" id="otp" name="one_time_passcode" class="form-control" placeholder="Verification Code" required autofocus>
+                <input type="text" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
             </p>
             <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
-                <button id="verbtn" class="btn btn-outline-dark" style="color: white;" type="submit" name="signin">Verify</button>
+                <button id="verbtn" class="btn btn-outline-dark" style="color: white;" type="submit" name="signin">submit</button>
             </div>
         </form>
     </div>
@@ -25,7 +25,7 @@
 
         otp = document.getElementById("otp").value;
 
-        fetch("{{ url_for("user_verify_otp") }}?otp=" + otp)
+        fetch("{{ url_for("user_password_reset") }}?email=" + email)
             .then((response) => response.json())
             .then((data) => {
                 if (data.status == "Success") {
