Fix toast messages visibility
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/static/css/stylesheet.css
+++ b/augur/static/css/stylesheet.css
@@ -108,7 +108,8 @@ body {
 
 .toast {
     background-color: var(--color-notice);
-    color: var(--color-fg);
+    color: var(--color-bg);
+    z-index: 100000;
 }
 
 #toast-placeholder {
