Work on email service support
- Test and verify SendGrid functionality
- Reorganization
- Remove errant print statement
- Separate email service from core functionality
 - Add `services` module
 - Move dependent imports to runtime
- Fix conflicting route function definition

Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/templates/verify-email.j2
+++ b/augur/templates/verify-email.j2
@@ -29,9 +29,9 @@
             .then((response) => response.json())
             .then((data) => {
                 if (data.status == "Success") {
-                    window.location.replace("{{ url_for("user_settings") }}")
+                    window.location.replace("{{ url_for("user_settings") }}");
                 } else {
-                    flashToast(data.status)
+                    flashToast(data.status);
                 }
             });
     }
