Add jinja example to markdown file
Signed-off-by: ulincsys <28362836a@gmail.com>

--- a/augur/templates/dei-badging-report.j2
+++ b/augur/templates/dei-badging-report.j2
@@ -6,3 +6,13 @@
 - Repo:
     - {{ project.repo.repo_id }}
     - {{ project.repo.repo_git }}
+
+{% if project.level == "gold" %}
+
+{% elif project.level == "bronze" %}
+
+{% else %}
+
+# ERROR
+
+{% endif %}
