Finish implementation and testing of email integration
- Complete password reset frontend route
- Add email update to verification page
- Add password reset logic to email service
- Update login page with password reset link
- Finish password reset page

Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/static/css/stylesheet.css
+++ b/augur/static/css/stylesheet.css
@@ -101,6 +101,10 @@ body {
     background-color: var(--color-accent);
 }
 
+.form-spacer {
+    min-height: 30px;
+}
+
 .toast-container {
     top: 80px !important;
     right: 16px !important;
