--- a/augur/templates/reset-password.j2
+++ b/augur/templates/reset-password.j2
@@ -1,6 +1,82 @@
+{% if user %}
+<p>Enter your new password below</p>
+<div class="container-fluid mt-4">
+    <div class="row justify-content-center">
+        <form id="password-form" class="form-signin" style="width: 400px;" method="post" action="#">
+            <small id="passwordHelpInline" class="text-muted registration hidden">
+                Must be 8-20 characters long.
+            </small>
+            <div class="input-group mb-3">
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password"
+                    required>
+                <div class="input-group-append">
+                    <button class="btn password-toggle" type="button" onclick="togglePass()">
+                        <i class="bi bi-eye-slash" id="togglePassword"></i>
+                    </button>
+                </div>
+            </div>
+            <div id="password-confirm-block" class="registration">
+                <div class="input-group mb-3">
+                    <input type="password" id="password-confirm" name="password-confirm" class="form-control"
+                        placeholder="Confirm Password" required>
+                    <div class="input-group-append">
+                        <button class="btn password-toggle" type="button" onclick="togglePass()">
+                            <i class="bi bi-eye-slash" id="togglePasswordConfirm"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
+                <button id="verbtn" class="btn btn-outline-dark" style="color: white;" type="submit" name="signin">submit</button>
+            </div>
+        </form>
+    </div>
+</div>
+<script type="text/javascript">
+    function formError(event, message) {
+        event.preventDefault();
+        flashToast(message);
+    }
+
+    function submitForm(event) {
+        var password = document.getElementById("password");
+        var passconf = document.getElementById("password-confirm");
+
+        if(password.value.length < 8) {
+            formError(event, "Password must be at least 8 characters");
+        } else if(password.value.length > 20) {
+            formError(event, "Password must be at most 20 characters");
+        } else if(password.value != passconf.value) {
+            formError(event, "Passwords do not match");
+        }
+    }
+
+    form = document.getElementById("password-form");
+    form.addEventListener("submit", submitForm);
+</script>
+<script>
+    // Password visibility toggle
+    const togglePassword = document.querySelector("#togglePassword");
+    const togglePasswordConfirm = document.querySelector("#togglePasswordConfirm");
+    const password = document.querySelector("#password");
+    const passwordConfirm = document.querySelector("#password-confirm")
+
+    function togglePass() {
+        // toggle the type attribute
+        const type = password.getAttribute("type") === "password" ? "text" : "password";
+        password.setAttribute("type", type);
+        passwordConfirm.setAttribute("type", type);
+
+        // toggle the icon
+        togglePassword.classList.toggle("bi-eye");
+        togglePasswordConfirm.classList.toggle("bi-eye");
+    }
+
+    togglePassword.addEventListener("click", togglePass);
+</script>
+{% else %}
 <h1>Password Reset</h1>
 <p>Enter your email below</p>
-<p>If this email is associated with an account, a password reset link will be sent.</p>
 <div class="container-fluid mt-4">
     <div class="row justify-content-center">
         <form id="verify-form" class="form-signin" style="width: 400px;" method="post" action="#">
@@ -13,29 +89,6 @@
         </form>
     </div>
 </div>
-
-<script type="text/javascript">
-    function formError(event, message) {
-        event.preventDefault();
-        flashToast(message);
-    }
-
-    function submitForm(event) {
-        event.preventDefault();
-
-        otp = document.getElementById("otp").value;
-
-        fetch("{{ url_for("user_password_reset") }}?email=" + email)
-            .then((response) => response.json())
-            .then((data) => {
-                if (data.status == "Success") {
-                    window.location.replace("{{ url_for("user_settings") }}")
-                } else {
-                    flashToast(data.status)
-                }
-            });
-    }
-
-    form = document.getElementById("verify-form");
-    form.addEventListener("submit", submitForm);
-</script>
+<div class="form-spacer"></div>
+<strong>If your account email is not verified, you'll need to contact an admin to reset your password.</strong>
+{% endif %}
