--- a/augur/templates/first-time.j2
+++ b/augur/templates/first-time.j2
@@ -1,18 +1,23 @@
 {# https://www.bootdey.com/snippets/view/dark-profile-settings #}
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link href="{{ url_for('static', filename='css/first_time.css') }}" rel="stylesheet">
 </head>
+
 <body>
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <div class="container">
         <div class="row">
             {# Start sidebar #}
@@ -29,14 +34,17 @@
                                 <h1 class="mb-2 text-primary">First Time Setup</h1>
                                 <p>Take a moment to create or update the configuration for your instance.</p>
                                 <br>
-                                <p>Default values are shown. When you are done updating, click the restart button to save the settings and bring the primary server up.</p>
+                                <p>Default values are shown. When you are done updating, click the restart button to
+                                    save the settings and bring the primary server up.</p>
+                                <p>Double-click an empty input field to automatically populate it with the placeholder
+                                    value</p>
                             </div>
 
                         </div>
                     </div>
                     <div class="card-footer text-muted">
                         {% if version %}
-                        Version: {{ version.major }}-{{ version.minor }}-{{ version.series }}
+                        Version: {{ version }}
                         {% else %}
                         Version: Unspecified
                         {% endif %}
@@ -50,35 +58,60 @@
                         <form id="settings-form">
                             {% for section in sections %}
                             <div class="row mb-3">
-                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                    <h6 class="mb-3 text-primary">{{ section.title }}</h6>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mb-2">
+                                    {% if section.subtitle %}
+                                    <h6 class="text-primary no-margin-bottom">{{ section.title }}</h6>
+                                    <small class="subtitle">{{ section.subtitle }}</small>
+                                    {% else %}
+                                    <h6 class="text-primary">{{ section.title }}</h6>
+                                    {% endif %}
                                 </div>
                                 {% for setting in section.settings %}
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                                     <div class="form-group">
                                         <label for="{{ setting.id }}" class="mb-1">{{ setting.display_name }}</label>
-                                        <input type="text" class="form-control" id="{{ setting.id }}" placeholder="{{ setting.value }}">
+                                        <input type="text" class="form-control input-textbox" id="{{ setting.id }}"
+                                            placeholder="{{ setting.value }}">
                                         <div class="form-text mb-1">{{ setting.description }}</div>
                                     </div>
                                 </div>
                                 {% endfor %}
                             </div>
                             {% endfor %}
-                            <div class="row mb-3">
-                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                    <h6 class="mb-3 text-primary">Gunicorn Settings</h6>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="input-group editor-container">
-                                        <div id="gunicorn-settings" class="form-control" aria-label="gunicorn config input">{{ gunicorn_placeholder }}</div>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="row">
                                 <div class="d-flex justify-content-end">
-                                    <button type="submit" id="submit" name="submit" class="btn btn-primary">Restart</button>
+                                    <button type="submit" id="submit" name="submit"
+                                        class="btn btn-primary">Apply</button>
                                 </div>
                             </div>
+                        </form>
+                        <div class="row mb-3">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                <h6 class="mb-3 text-primary">Test Database Settings</h6>
+                            </div>
+                            <div class="d-flex">
+                                <div class="input-group editor-container">
+                                    <div id="db-output" class="form-control"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-start" style="margin-top: 10px; column-gap: 10px;">
+                                <button id="dbtest_button" name="dbtest_button"
+                                    class="btn btn-primary">&circlearrowleft;</button>
+                                <button id="dbversions_button" name="dbversions_button"
+                                    class="btn btn-primary">List Revisions</button>
+                            </div>
+                        </div>
+                        {# <div class="row mb-3">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                <h6 class="mb-3 text-primary">Gunicorn Settings</h6>
+                            </div>
+                            <div class="d-flex">
+                                <div class="input-group editor-container">
+                                    <div id="gunicorn-settings" class="form-control" aria-label="gunicorn config input">
+                                        {{ gunicorn_placeholder }}</div>
+                                </div>
+                            </div>
+                        </div> #}
                         </form>
                     </div>
                 </div>
@@ -101,111 +134,153 @@
             </div>
         </div>
     </div>
-    <div id="loading-modal" class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div id="loading-modal" class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered spinner-container">
             <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-                <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+                <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30">
+                </circle>
             </svg>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.7.1/ace.js" integrity="sha512-FKkEO4RZEQjFmU1hoUYdx6HJLdpHpNzgWspgnQCxx7OOkDVz4kiGJxR97yWc5bzjwcCpJC/CRCiQzuoGYAChhQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.7.1/ace.js"
+        integrity="sha512-FKkEO4RZEQjFmU1hoUYdx6HJLdpHpNzgWspgnQCxx7OOkDVz4kiGJxR97yWc5bzjwcCpJC/CRCiQzuoGYAChhQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{{ url_for('static', filename='js/sleep.js') }}"></script>
     <script>
-    var loadingModal = new bootstrap.Modal(document.getElementById('loading-modal'));
+        var loadingModal = new bootstrap.Modal(document.getElementById('loading-modal'));
 
-    // set up the code editor
-    var editor = ace.edit("gunicorn-settings");
-    editor.setTheme("ace/theme/one_dark");
-    editor.session.setMode("ace/mode/python");
-    editor.setOptions({
-        enableBasicAutocompletion: true,
-        enableSnippets: true,
-        showPrintMargin: false
-    });
-
-    function submit_form(event) {
-        // Stop the form from submitting so we can execute a request instead
-        event.preventDefault();
-
-        // Convert the form into a dictionary
-
-        /* For some reason this didn't work here, so I did it another way
-        const formData = new FormData(event.target);
-        const formProperties = Object.fromEntries(formData);
-        */
-
-        var elements = event.target.querySelectorAll('input');
-        var config = new Object();
-
-        elements.forEach((element) => {
-            if(element.value != "") {
-                config[element.id] = element.value;
-            }
+        // set up the code editor
+        var editor = ace.edit("db-output");
+        editor.setTheme("ace/theme/one_dark");
+        editor.session.setMode("ace/mode/text");
+        editor.setOptions({
+            enableBasicAutocompletion: true,
+            enableSnippets: true,
+            showPrintMargin: false,
+            readOnly: true
         });
 
-        // Submit the gunicorn configuration to the server
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", "{{ url_for('update_gunicorn') }}", true);
-        xhr.setRequestHeader('Content-Type', 'text/plain');
-        xhr.send(editor.getValue());
-
-        // Submit the form dictionary to the server
-        xhr = new XMLHttpRequest();
-        xhr.open("POST", "{{ url_for('update_config') }}", true);
-        xhr.setRequestHeader('Content-Type', 'application/json');
-        xhr.send(JSON.stringify(config));
-
-        // Check the response
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState == XMLHttpRequest.DONE) {
-                if(xhr.status != 200) {
-                    if(xhr.status) {
-                        // The first time setup server returned an error
-                        displayError(xhr.responseText);
-                    } else {
-                        // The first time setup server did not respond
-                        displayError("The first time setup server is unreachable");
-                    }
-                } else {
-                    // Display a loading indicator while starting up the production server
-                    loadingModal.show();
-                    waitToReload(xhr.responseText);
-                }
+        async function test_db(event) {
+            event.preventDefault();
+            editor.session.setValue("Loading...");
+            var result = await fetch("{{ url_for("test_db") }}");
+            var text = await result.text();
+            if (result.status == 200) {
+                result = await fetch("{{ url_for("version_db") }}");
+                text += "\nDatabase version: " + await result.text();
             }
+            editor.session.setValue(text)
         }
-    }
 
-    async function waitToReload(new_url) {
-        // Shut down the temp server and wait for primary to initialize
-        fetch("{{ url_for('shutdown') }}").then(async () => {
-            // The response from the config endpoint is the new approot
-            let count = 5;
-            while(--count >= 0) {
-                try {
-                    await sleep(1000);
-                    fetch(window.location + new_url).then(() => {
-                        window.location.replace(new_url);
-                    });
-                } catch(e) {
-                    // do nothing for now
+        async function versions_db(event) {
+            event.preventDefault();
+            editor.session.setValue("Loading...");
+            var result = await fetch("{{ url_for("versions_db") }}");
+            var text = await result.text();
+            editor.session.setValue(text)
+        }
+
+        test_db_btn = document.getElementById("dbtest_button");
+        test_db_btn.addEventListener("click", test_db);
+
+        versions_db_btn = document.getElementById("dbversions_button");
+        versions_db_btn.addEventListener("click", versions_db);
+
+        {#
+            function submit_form(event) {
+                // Stop the form from submitting so we can execute a request instead
+                event.preventDefault();
+
+                // Convert the form into a dictionary
+
+                /* For some reason this didn't work here, so I did it another way
+                const formData = new FormData(event.target);
+                const formProperties = Object.fromEntries(formData);
+                */
+
+                var elements = event.target.querySelectorAll('input');
+                var config = new Object();
+
+                elements.forEach((element) => {
+                    if (element.value != "") {
+                        config[element.id] = element.value;
+                    }
+                });
+
+                // Submit the gunicorn configuration to the server
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST", "{{ url_for('update_gunicorn') }}", true);
+                xhr.setRequestHeader('Content-Type', 'text/plain');
+                xhr.send(editor.getValue());
+
+                // Submit the form dictionary to the server
+                xhr = new XMLHttpRequest();
+                xhr.open("POST", "{{ url_for('update_config') }}", true);
+                xhr.setRequestHeader('Content-Type', 'application/json');
+                xhr.send(JSON.stringify(config));
+
+                // Check the response
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState == XMLHttpRequest.DONE) {
+                        if (xhr.status != 200) {
+                            if (xhr.status) {
+                                // The first time setup server returned an error
+                                displayError(xhr.responseText);
+                            } else {
+                                // The first time setup server did not respond
+                                displayError("The first time setup server is unreachable");
+                            }
+                        } else {
+                            // Display a loading indicator while starting up the production server
+                            loadingModal.show();
+                            waitToReload(xhr.responseText);
+                        }
+                    }
                 }
             }
-            displayError("Timeout reached waiting for production server");
-        });
-    }
 
-    // Pop up a modal window with the error text displayed
-    function displayError(error) {
-        loadingModal.hide();
-        var text = document.getElementById("modal-text");
-        text.innerHTML = error;
-        var errorModal = new bootstrap.Modal(document.getElementById('error-modal'))
-        errorModal.show();
-    }
+        #}
+        async function waitToReload(new_url) {
+            // Shut down the temp server and wait for primary to initialize
+            fetch("{{ url_for('shutdown') }}").then(async () => {
+                // The response from the config endpoint is the new approot
+                let count = 5;
+                while (--count >= 0) {
+                    try {
+                        await sleep(1000);
+                        fetch(window.location + new_url).then(() => {
+                            window.location.replace(new_url);
+                        });
+                    } catch (e) {
+                        // do nothing for now
+                    }
+                }
+                displayError("Timeout reached waiting for production server");
+            });
+        }
 
-    // Have the settings-form call submit_form when submitted
-    const loginForm = document.getElementById("settings-form");
-    loginForm.addEventListener("submit", submit_form);
-</script>
+        // Pop up a modal window with the error text displayed
+        function displayError(error) {
+            loadingModal.hide();
+            var text = document.getElementById("modal-text");
+            text.innerHTML = error;
+            var errorModal = new bootstrap.Modal(document.getElementById('error-modal'))
+            errorModal.show();
+        }
+
+        for (var box of document.getElementsByClassName("input-textbox")) {
+            box.addEventListener("dblclick", (event) => {
+                if (event.target.value == "") {
+                    event.target.value = event.target.placeholder;
+                }
+            });
+        }
+
+        // Have the settings-form call submit_form when submitted
+        // const loginForm = document.getElementById("settings-form");
+        // loginForm.addEventListener("submit", submit_form);
+    </script>
 </body>
+
 </html>
